<resources>
    <string name="app_name">To Do List</string>
    <string name="title_toolbar">Criar tarefa</string>
    <string name="title_cancelar">Cancelar</string>
    <string name="title_criar_tarefa">Criar tarefa</string>
    <string name="title_titulo">Título</string>
    <string name="title_data">Data</string>
    <string name="title_hora">Hora</string>
    <string name="title_tarefas">Tarefas</string>
    <string name="title_fab_nova_tarefa">Nova tarefa</string>
    <string name="title_editar">Editar</string>
    <string name="deletar">Deletar</string>
    <string name="title_no_tasks">Ops! Você não possui\nnenhuma tarefa!</string>
</resources>